[tool.hatch.build.targets.wheel]
packages = ["mazahav"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "pymeow"
version = "0.1.0"
description = "A Python implementation of the WhatsApp Web multidevice API"
readme = "README.md"
requires-python = "==3.13.*"
authors = [
    {name = "Pymeow Contributors", email = "tovmeod+pymeow@gmail.com"},
]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aerich==0.9.0",
    "aiohttp==3.12.2",
    "cryptography==45.0.3",
    "pillow==11.2.1",
    "protobuf>=4.21.0,<5.0.0",
    "pycryptodome==3.23.0",
    "python-dotenv==1.1.0",
    "qrcode==8.2",
    "signal-protocol>=0.2.2",
    "tortoise-orm[asyncpg]==0.25.0",
]

[project.urls]
Homepage = "https://github.com/tulir/whatsmeow/tree/main/pymeow"
Bug_Tracker = "https://github.com/tulir/whatsmeow/issues"

[tool.setuptools]
packages = ["pymeow"]

[tool.setuptools.package-data]
pymeow = ["py.typed"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=pymeow --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[dependency-groups]
dev = [
    "mypy-protobuf==3.6.0",
    "pytest==8.3.5",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.1.1",
    "types-protobuf>=4.24.0,<5.0.0",
]
